modified: Card interface and About&Classes components; created components: Tutor, Studio, Tagcloud

--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -51,6 +51,7 @@
                 </div>
 
                 <!-- Remove these buttons? -->
+                <!-- Replace with box "benefits of the season pass"! -->
                 <div class="flex-col info">
                     <span>Узнать больше:</span>
                     <div class="flex-row center-row btns">
