--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,7 @@
     <app-home id="home-section"></app-home>
     <app-about id="about-section"></app-about>
     <app-classes id="classes-section"></app-classes>
+    <app-tutor id="tutor-section"></app-tutor>
+    <app-studio id="studio-section"></app-studio>
     <app-contacts id="contacts-section"></app-contacts>
 </div>
