--- a/src/app/components/studio/studio.component.scss
+++ b/src/app/components/studio/studio.component.scss
@@ -4,24 +4,78 @@
     grid-template-rows: repeat(2, 1fr);
     gap: 20px;
     height: 100%;
+    padding: 0 5%;
 
     .gallery-thumbs {
         grid-column: span 7;
-        border: 2px solid blue;
+        border: 1px solid blue;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+
+        h3 {
+            text-align: center;
+            margin-bottom: 10px;
+        }
+
+        .swiper-container {
+            display: flex;
+            flex-grow: 1;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+        }
+
+        .swiper-wrapper {
+            display: flex;
+            align-items: center;
+            height: 100%;
+        }
+
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+            aspect-ratio: 1 / 1; // Ensure square aspect ratio
+            max-width: 300px; // Set maximum width for each slide
+            max-height: 300px; // Set maximum height for each slide
+            width: 100%; // Fill the container width
+            height: 100%; // Fill the container height
+
+            img {
+                object-fit: cover;
+                border-radius: 8px;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .swiper-slide:hover {
+            transform: scale(1.1);
+        }
+
+        .thumbnail-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 8px;
+        }
     }
 
     .gallery-text {
         grid-column: span 5;
-        border: 2px solid blue;
+        border: 1px solid blue;
     }
 
     .reviews-text {
         grid-column: span 4;
-        border: 2px solid blue;
+        border: 1px solid blue;
     }
 
     .reviews-tagcloud {
         grid-column: span 8;
-        border: 2px solid blue;
+        border: 1px solid blue;
     }
 }
