Created: Feedbacks component; replaced Swiper classes with import from node in styles.scss

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <!-- For Mobile Version -->
-    <app-gallery *ngIf="isMobile" [slides]="cards"></app-gallery>
+    <app-gallery *ngIf="isMobile" [slides]="cards" preset="gallery"></app-gallery>
 
     <!-- TO DO -->
 
