--- a/src/app/components/studio/studio.component.html
+++ b/src/app/components/studio/studio.component.html
@@ -7,7 +7,7 @@
     <div class="h-100 content">
 
         <div class="gallery-thumbs">
-            <!-- <h3>Фотогалерея студии</h3> -->
+            <h3>Фотогалерея</h3>
 
             <!-- place for the gallery with thumbnails made with Swiper.js -->
             <!-- on click open the dialog with the gallery component on the photo clicked -->
@@ -18,26 +18,48 @@
                     </div>
                 </div>
             </div>
+            <!-- <app-gallery [slides]="images" preset="thumbs"></app-gallery> -->
         </div>
 
         <div class="flex-col gallery-text">
+            <h4>
+                Студия <span class="sigma-font">ΣΙΓΜΑ</span> — идеальное место для тех, кто хочет научиться петь и
+                раскрыть свой творческий потенциал.
+            </h4>
             <span>
-                Студия ΣΙΓΜΑ расположена в Московском районе Санкт-Петербурга. Это творческое пространство с уютной
-                атмосферой, оснащённое необходимым оборудованием. Здесь вы сможете эффективно развивать свои навыки и
-                способности.
+                Я предлагаю индивидуальные занятия, на которых мы будем работать вместе, чтобы вы достигли успеха.
+            </span>
+            <!-- <span>
+                Я предоставляю индивидуальные занятия, где мы вместе работаем над вашим успехом.
+            </span> -->
+            <span>
+                Настрой и творческая атмосфера играют ключевую роль в обучении, и я уделяю особое внимание тому, чтобы в
+                студии царила дружелюбная среда, способствующая вашему расслаблению и концентрации. Интерьер студии,
+                оснащённый современным профессиональным оборудованием, вместе с уютным уголком для отдыха создают
+                уникальную атмосферу, способствующую комфортному и продуктивному обучению.
+            </span>
+            <span>
+                С <span class="sigma-font">ΣΙΓΜΑ</span> вы откроете для себя мир музыки и пения!
             </span>
         </div>
 
         <div class="flex-col reviews-text">
             <h3>Отзывы</h3>
             <span>
-                Более 100 учеников вместе с <span class="sigma-font">ΣΙΓΜΑ</span> раскрыли свой талант. Начните и вы!
+                Более 100 учеников уже раскрыли свой талант вместе с <span class="sigma-font">ΣΙΓΜΑ</span>. Теперь ваша
+                очередь присоединиться к ним и начать свой путь к успеху!
             </span>
+            <span>
+                Не упустите возможность развить свои вокальные способности и погрузиться в мир музыки. ΣΙΓΜΑ — это не
+                просто обучение, это путь к реализации вашего творческого потенциала.
+            </span>
+            <!-- <span>
+                Более 100 учеников вместе с <span class="sigma-font">ΣΙΓΜΑ</span> раскрыли свой талант. Начните и вы!
+            </span> -->
         </div>
 
         <div class="reviews-tagcloud">
-            <!-- place for 3d tag cloud with screenshots of the reviews -->
-            <!-- (not created yet) -->
+            <app-feedbacks></app-feedbacks>
         </div>
 
     </div>
