--- a/src/app/components/tutor/tutor.component.html
+++ b/src/app/components/tutor/tutor.component.html
@@ -19,15 +19,20 @@
         </div>
 
         <div class="flex-col center-col mid-col">
-            <h2>[Tutor's Name]</h2>
-            <span>Певица, композитор, музыкант, автор песен</span>
-            <h4>Бэкграунд</h4>
-            <span>Основала собственную студию <span class="sigma-font">ΣΙΓΜΑ</span> в 2020 году.</span>
-            <h4>Достижения</h4>
-            <ul>
-                <li>За время моей практики обучила более 100 учеников самых разных уровней.</li>
-                <li>Владею несколькими музыкальными инструментами:</li>
-            </ul>
+            <div class="flex-col w-100">
+                <h2>[Tutor's Name]</h2>
+                <span>Певица, композитор, музыкант, автор песен</span>
+            </div>
+            <!-- <div style="max-width: 450px;"> -->
+            <div>
+                <h4>Бэкграунд</h4>
+                <span>Основала собственную студию <span class="sigma-font">ΣΙΓΜΑ</span> в 2020 году.</span>
+                <h4>Достижения</h4>
+                <ul>
+                    <li>За время моей практики обучила более 100 учеников самых разных уровней.</li>
+                    <li>Владею несколькими музыкальными инструментами:</li>
+                </ul>
+            </div>
             <img class="img-action" alt="tutor in action"
                 src="https://res.cloudinary.com/dxunxtt1u/image/upload/lesson3_yvbe9q.png">
         </div>
