--- a/src/app/components/tutor/tutor.component.scss
+++ b/src/app/components/tutor/tutor.component.scss
@@ -1,62 +1,31 @@
-// .center-col {
-//     justify-content: center;
-// }
-
-// .center-row {
-//     align-items: center;
-// }
-
-// .h-100 {
-//     height: 100%;
-// }
-
-// .w-100 {
-//     width: 100%;
-// }
-
-// .w-h-100 {
-//     width: 100%;
-//     height: 100%;
-// }
-
-// .section {
-//     height: 100vh;
-// }
-
-// .plug {
-//     background-color: var(--brand-color);
-//     color: var(--brand-color);
-// }
-
-// h2 {
-// height: 80px;
-// margin: 0;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-// }
-
 .content {
     display: grid;
-    grid-template-columns: 1fr 1fr auto;
-    /* Adjusted to equal widths and auto for the right-col */
+    grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr;
     padding-left: 5%;
     gap: 20px;
+
+    img {
+        max-width: 400px;
+    }
 }
 
 .left-col {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
     padding: 40px 0;
+    border: 1px solid blue;
 }
 
 .mid-col {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     padding: 40px 0;
+    border: 1px solid blue;
 
     h2 {
         height: unset;
@@ -68,22 +37,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid blue;
 }
 
 .diploma__img {
     width: 100%;
     object-fit: contain;
-    /* Ensure the diploma image fits within its column */
 }
 
 .img-action {
     width: 100%;
-    /* Sized by the mid-col width */
     object-fit: contain;
 }
 
 .img-cover {
     height: calc(100vh - 80px);
     object-fit: cover;
-    /* Ensure the image fits the height of the right-col */
 }
