--- a/src/app/components/feedbacks/feedbacks.component.html
+++ b/src/app/components/feedbacks/feedbacks.component.html
@@ -1,9 +1,30 @@
 <h2>What Our Students Say</h2>
-<blockquote>
+
+<!-- <blockquote>
     <p>"I've improved so much since I started taking lessons here. The tutor is amazing and really knows how to
         bring out the best in her students!" - [Student Name]</p>
 </blockquote>
 <blockquote>
     <p>"The atmosphere at Sigma Vocal Place is so encouraging. I always leave my lessons feeling more confident and
         inspired." - [Student Name]</p>
-</blockquote>
+</blockquote> -->
+
+<!-- *ngIf="preset === 'vertical'" -->
+<div class="swiper-container vertical-swiper">
+    <div class="swiper-slide vertical-slide" *ngFor="let slide of reviews">
+        <div class="vertical-header">
+            <ng-container *ngIf="slide.image; else placeholder">
+                <img [src]="slide.image" alt="user image">
+            </ng-container>
+            <ng-template #placeholder>
+                <mat-icon>person</mat-icon>
+            </ng-template>
+            <span class="user-name">{{ slide.user }}</span>
+            <img [src]="slide.source.logo" alt="source logo" class="source-logo">
+        </div>
+        <mat-divider></mat-divider>
+        <div class="vertical-content">
+            <span>{{ slide.contentLong }}</span>
+        </div>
+    </div>
+</div>
