--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="flex-col swiper-container">
+<div class="flex-col swiper-container swiper-gallery">
     <div class="swiper-wrapper">
 
         <mat-card class="h-100 swiper-slide card" *ngFor="let slide of slides">
