--- a/src/app/components/studio/studio.component.scss
+++ b/src/app/components/studio/studio.component.scss
@@ -2,47 +2,51 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 20px;
+    // gap: 20px;
+    column-gap: 20px;
     height: 100%;
     padding: 0 5%;
 
     .gallery-thumbs {
-        grid-column: span 7;
+        grid-column: span 6;
         border: 1px solid blue;
         overflow: hidden;
         display: flex;
         flex-direction: column;
+        justify-content: center;
 
         h3 {
             text-align: center;
             margin-bottom: 10px;
         }
 
-        .swiper-container {
+        .swiper-thumbs {
             display: flex;
             flex-grow: 1;
             overflow: hidden;
             width: 100%;
             height: 100%;
+            max-height: 250px;
         }
 
-        .swiper-wrapper {
+        .thumbs-wrapper {
             display: flex;
             align-items: center;
             height: 100%;
         }
 
-        .swiper-slide {
+        .thumbs-slide {
             display: flex;
             justify-content: center;
             align-items: center;
             cursor: pointer;
             transition: transform 0.3s ease;
-            aspect-ratio: 1 / 1; // Ensure square aspect ratio
-            max-width: 300px; // Set maximum width for each slide
-            max-height: 300px; // Set maximum height for each slide
-            width: 100%; // Fill the container width
-            height: 100%; // Fill the container height
+            aspect-ratio: 1 / 1;
+            max-width: 250px;
+            max-height: 200px;
+            // width: 100%;
+            // height: 100%;
+            // width: 200px !important;
 
             img {
                 object-fit: cover;
@@ -52,7 +56,7 @@
             }
         }
 
-        .swiper-slide:hover {
+        .thumbs-slide:hover {
             transform: scale(1.1);
         }
 
@@ -65,17 +69,120 @@
     }
 
     .gallery-text {
-        grid-column: span 5;
+        grid-column: span 6;
         border: 1px solid blue;
     }
 
     .reviews-text {
-        grid-column: span 4;
+        grid-column: span 6;
         border: 1px solid blue;
     }
 
-    .reviews-tagcloud {
-        grid-column: span 8;
+
+
+
+
+
+    .reviews-slides {
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+        grid-column: span 6;
         border: 1px solid blue;
+        position: relative;
+        max-width: 760px;
+
+        button {
+            background: var(--brand-color);
+            color: var(--light-color);
+            border-radius: 50%;
+            height: 40px;
+            width: 40px;
+            margin: 0 10px;
+        }
+    }
+
+    .swiper-reviews {
+        flex-grow: 1;
+        // max-height: 300px;
+        overflow: hidden;
+        height: 100%;
+        display: flex;
+        align-items: center;
+
+        .reviews-wrapper {
+            align-items: center;
+            height: unset;
+        }
+
+        .reviews-slide {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            background: var(--light-color);
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            color: var(--dark-color);
+            max-width: 500px;
+        }
+
+        .reviews-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 10px;
+            // padding: 10px 40px 10px 30px;
+            padding: 10px 30px;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+
+            .user-name {
+                font-weight: bold;
+                font-size: 18px;
+            }
+
+            .source-logo {
+                width: 40px;
+                height: 40px;
+                object-fit: contain;
+                border-radius: 5px;
+            }
+        }
+
+        .reviews-content {
+            margin: 10px 0;
+            // font-size: 14px;
+            font-size: calc(10px + 0.2vw);
+            text-align: justify;
+            padding: 0 20px;
+        }
+
+        // Colorize the slides depending on the Source
+        .avito {
+            background: linear-gradient(to right, rgba(3, 214, 94, 0.5), rgba(3, 214, 94, 0));
+        }
+
+        .yandex {
+            background: linear-gradient(to right, rgba(255, 0, 0, 0.4), rgba(255, 0, 0, 0));
+        }
+
+        .google {
+            background: linear-gradient(to right, rgba(66, 133, 244, 0.5), rgba(66, 133, 244, 0));
+        }
+
+        .profi {
+            background: linear-gradient(to right, rgba(151, 50, 83, 0.5), rgba(66, 133, 244, 0));
+        }
+
+        // Unselected slide effects
+        .swiper-slide-prev {
+            opacity: 0.9;
+            // background: linear-gradient(to left, var(--light-color), rgba(0, 0, 0, 0));
+        }
+
+        .swiper-slide-next {
+            opacity: 0.9;
+            // background: linear-gradient(to right, var(--light-color), rgba(0, 0, 0, 0));
+        }
     }
 }
