moved interfaces to special file; working on Studio component

--- a/src/app/components/studio/studio.component.html
+++ b/src/app/components/studio/studio.component.html
@@ -21,13 +21,16 @@
         </div>
 
         <div class="flex-col gallery-text">
-            <h4>
-                Студия <span class="sigma-font">ΣΙΓΜΑ</span> — идеальное место для тех, кто хочет научиться петь и
+            <h3>Студия <span class="sigma-font">ΣΙΓΜΑ</span></h3>
+            <h4>идеальное место для тех, кто хочет научиться петь и раскрыть свой творческий потенциал.</h4>
+            <!-- <h4>
+                <span>Студия </span><span class="sigma-font">ΣΙΓΜΑ</span> — идеальное место для тех, кто хочет научиться
+                петь и
                 раскрыть свой творческий потенциал.
-            </h4>
-            <span>
+            </h4> -->
+            <!-- <span>
                 Я предлагаю индивидуальные занятия, на которых мы будем работать вместе, чтобы вы достигли успеха.
-            </span>
+            </span> -->
             <!-- <span>
                 Я предоставляю индивидуальные занятия, где мы вместе работаем над вашим успехом.
             </span> -->
@@ -37,24 +40,37 @@
                 оснащённый современным профессиональным оборудованием, вместе с уютным уголком для отдыха создают
                 уникальную атмосферу, способствующую комфортному и продуктивному обучению.
             </span>
-            <span>
-                С <span class="sigma-font">ΣΙΓΜΑ</span> вы откроете для себя мир музыки и пения!
-            </span>
         </div>
 
         <div class="flex-col reviews-text">
-            <h3>Что говорят студенты</h3>
-            <span>
-                Более 100 учеников уже раскрыли свой талант вместе с <span class="sigma-font">ΣΙΓΜΑ</span>. Теперь ваша
-                очередь присоединиться к ним и начать свой путь к успеху!
-            </span>
-            <span>
-                Не упустите возможность развить свои вокальные способности и погрузиться в мир музыки. ΣΙΓΜΑ — это не
-                просто обучение, это путь к реализации вашего творческого потенциала.
-            </span>
+            <h3>Что говорят студенты:</h3>
+
+            <span style="text-align: center; margin-bottom: 10px;">[Top Picks from real reviews]</span>
+            <span>Присоединяйтесь к более чем 100 успешным ученикам и начните свой путь к музыкальному успеху!</span>
+            <span class="sigma-font"></span>
+            <ul>
+                <li>
+                    Персональные занятия, на которых мы будем работать вместе,
+                    чтобы вы достигли успеха
+                </li>
+                <li>
+                    Возможность развить вокальные способности и глубже погрузиться в мир музыки.
+                </li>
+                <li>
+                    ΣΙΓΜΑ — это не просто обучение, это ваш путь к раскрытию творческого потенциала.
+                </li>
+                <li>
+                    Вы откроете для себя новые грани музыки и пения
+                </li>
+            </ul>
             <!-- <span>
-                Более 100 учеников вместе с <span class="sigma-font">ΣΙΓΜΑ</span> раскрыли свой талант. Начните и вы!
+                Более 100 учеников уже раскрыли свой талант вместе с ΣΙΓΜΑ. Теперь ваша очередь присоединиться к ним и
+                начать свой путь к успеху! Я предлагаю индивидуальные занятия, на которых мы будем работать вместе,
+                чтобы вы достигли успеха. Не упустите возможность развить свои вокальные способности и погрузиться в мир
+                музыки. ΣΙΓΜΑ — это не просто обучение, это путь к реализации вашего творческого потенциала. С ΣΙΓΜΑ вы
+                откроете для себя мир музыки и пения!
             </span> -->
+
         </div>
 
         <div class="reviews-slides">
