--- a/src/app/components/studio/studio.component.scss
+++ b/src/app/components/studio/studio.component.scss
@@ -195,6 +195,7 @@
             font-size: calc(10px + 0.2vw);
             text-align: justify;
             padding: 0 20px;
+            color: var(--dark-alt-color);
         }
 
         // Colorize the slides depending on the Source
