--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -7,6 +7,7 @@
 
     --light-alt-color: #bfad51;
     --alt-color: #BF7651;
+    --shaded-alt-color: #964D28;
     --dark-alt-color: #65443C;
 
     --light-color: #f0f0f0;
