--- a/src/app/components/tutor/tutor.component.html
+++ b/src/app/components/tutor/tutor.component.html
@@ -5,33 +5,33 @@
     </div>
 
     <div class="h-100 content">
-        <div class="flex-col left-col">
-            <img class="diploma__img" alt="diploma image"
+        <div class="flex-col left-col education">
+            <img class="education__diploma" alt="diploma image"
                 src="https://res.cloudinary.com/dxunxtt1u/image/upload/diploma_tk8dre.png">
-            <div class="education">
-                <h4>Образование</h4>
-                <span>Санкт-Петербургский государственный институт культуры</span>
+            <div class="flex-col center-col education__text">
+                <h3>Образование</h3>
+                <span>Санкт-Петербургский государственный<br>институт культуры</span>
                 <ul>
                     <li>Факультет музыкального искусства эстрады</li>
                     <li>Кафедра эстрадно-джазового вокала</li>
                 </ul>
             </div>
+            <img class="education__pillar-top" alt=""
+                src="https://res.cloudinary.com/dxunxtt1u/image/upload/pillar-head_p9rfvj.png">
         </div>
 
         <div class="flex-col center-col mid-col">
-            <div class="flex-col w-100">
+            <div class="flex-col w-100 title">
                 <h2>[Tutor's Name]</h2>
-                <span>Певица, композитор, музыкант, автор песен</span>
+                <span class="subtitle">Певица, композитор, музыкант, автор песен</span>
             </div>
-            <div>
-                <h4>Бэкграунд</h4>
-                <span>Основала собственную студию <span class="sigma-font">ΣΙΓΜΑ</span> в 2020 году.</span>
-                <h4>Достижения</h4>
-                <ul>
-                    <li>За время моей практики обучила более 100 учеников самых разных уровней.</li>
-                    <li>Владею несколькими музыкальными инструментами:</li>
-                </ul>
-            </div>
+            <ul>
+                <li>Имею более 5 лет опыта преподавания вокала.</li>
+                <li>Основала собственную студию <span class="sigma-font">ΣΙΓΜΑ</span> в 2022 году.</li>
+                <li>За время своей практики обучила более 100 учеников самых разных уровней.</li>
+                <li>Владею несколькими музыкальными инструментами: пианино, гитара, скрипка, укулеле, барабаны,
+                    гармошка, варган.</li>
+            </ul>
             <img class="img-action" alt="tutor in action"
                 src="https://res.cloudinary.com/dxunxtt1u/image/upload/lesson3_yvbe9q.png">
         </div>
