Tutor component mobile version

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -98,13 +98,15 @@ app-gallery {
 
 @media (max-width: 768px) {
   .section {
-    // height: unset;
     padding: 4px 0;
+  }
+
+  .plug {
+    display: none;
   }
 
   app-gallery {
     display: block;
     height: 100vh;
-    // padding: 10px 0;
   }
 }
