--- a/src/app/components/tutor/tutor.component.html
+++ b/src/app/components/tutor/tutor.component.html
@@ -4,6 +4,7 @@
         <h2></h2>
     </div>
 
+    <!-- Desktop version -->
     <div class="h-100 content">
         <div class="flex-col left-col education">
             <img class="education__diploma" alt="diploma image"
@@ -22,7 +23,7 @@
 
         <div class="flex-col center-col mid-col">
             <div class="flex-col w-100 title">
-                <h2>[Tutor's Name]</h2>
+                <h2 class="name">[Tutor's Name]</h2>
                 <span class="subtitle">Певица, композитор, музыкант, автор песен</span>
             </div>
             <ul>
@@ -40,6 +41,55 @@
             <img class="img-cover" alt="teacher image bckg-transparent"
                 src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_S_sing3_blank_mirror_ktur4y.png">
         </div>
+    </div>
+
+    <!-- Mobile version -->
+    <div class="flex-col center-row w-100 content-mobile">
+        <div class="flex-col w-100 title">
+            <h2 class="name">[Tutor's Name]</h2>
+            <span class="subtitle">Певица, композитор, музыкант, автор песен</span>
+        </div>
+
+        <div class="upper">
+            <div class="upper__display">
+                <div class="education">
+                    <h3>Образование</h3>
+                    <span>Санкт-Петербургский государственный<br>институт культуры</span>
+                    <ul>
+                        <li>Факультет музыкального искусства эстрады</li>
+                        <li>Кафедра эстрадно-джазового вокала</li>
+                    </ul>
+                </div>
+                <img class="education__diploma" alt="diploma image"
+                    src="https://res.cloudinary.com/dxunxtt1u/image/upload/diploma_tk8dre.png">
+            </div>
+            <img class="img-cover" alt="teacher image bckg-transparent"
+                src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_S_sing3_blank_mirror_ktur4y.png">
+        </div>
+
+        <ul class="background">
+            <li>Имею более 5 лет опыта преподавания вокала.</li>
+            <li>Основала собственную студию <span class="sigma-font">ΣΙΓΜΑ</span> в 2022 году.</li>
+            <li>За время своей практики обучила более 100 учеников самых разных уровней.</li>
+            <li>Владею несколькими музыкальными инструментами: пианино, гитара, скрипка, укулеле, барабаны,
+                гармошка, варган.</li>
+        </ul>
+
+        <div class="education display">
+            <h3>Образование</h3>
+            <span>Санкт-Петербургский государственный<br>институт культуры</span>
+            <ul>
+                <li>Факультет музыкального искусства эстрады</li>
+                <li>Кафедра эстрадно-джазового вокала</li>
+            </ul>
+        </div>
+
+        <img class="education__diploma display" alt="diploma image"
+            src="https://res.cloudinary.com/dxunxtt1u/image/upload/diploma_tk8dre.png">
+
+        <img class="education__pillar-top display" alt=""
+            src="https://res.cloudinary.com/dxunxtt1u/image/upload/pillar-head_p9rfvj.png">
+
     </div>
 
 </div>
