--- a/src/styles.scss
+++ b/src/styles.scss
@@ -122,7 +122,8 @@ h2 {
     }
 
     .plug {
-        display: none;
+        // display: none;
+        background: var(--bright-brand-color);
     }
 }
 
