--- a/src/app/components/tutor/tutor.component.scss
+++ b/src/app/components/tutor/tutor.component.scss
@@ -3,10 +3,6 @@
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr;
     padding-left: 5%;
-
-    img {
-        max-width: 400px;
-    }
 }
 
 .left-col {
@@ -21,61 +17,50 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between; // check to remove
     flex-grow: 1;
-    justify-content: space-between;
 
     &__diploma {
         width: 100%;
-        max-width: 350px;
+        max-width: 380px;
         object-fit: contain;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
     }
 
     &__text {
-        max-width: 400px;
+        max-width: 380px;
+        min-width: 200px;
+        margin: 10px 0;
+        background: rgb(148, 170, 115, 0.2);
         box-shadow: 0 0 4px var(--dark-alt-color);
         border-radius: 5px;
-        background: rgb(148, 170, 115, 0.2);
-        margin: 10px 0;
     }
 
     h3 {
         text-align: center;
-        font-size: 20px;
         margin: 20px 0 10px 0;
+        font-size: 20px;
     }
 
     span {
+        padding: 0 10px;
+        display: flex;
+        justify-content: center;
         text-align: center;
         font-size: 18px;
-        padding: 0 10px;
     }
 
     ul {
-        padding: 0;
         margin-top: 10px;
-    }
-
-    li {
-        font-size: 16px;
-        line-height: 20px;
-        padding: 0 20px;
-        list-style-type: none;
-
-        &::before {
-            content: '';
-            display: inline-block;
-            width: 8px;
-            height: 8px;
-            background-color: var(--light-alt-color);
-            transform: rotate(45deg);
-            margin-right: 10px;
-        }
+        padding: 0;
     }
 
     &__pillar-top {
         width: 80%;
+        max-width: 300px;
     }
-
 }
 
 .mid-col {
@@ -85,61 +70,45 @@
     align-items: center;
     padding: 40px 0;
 
-    h2 {
-        height: unset;
-        margin-bottom: 4px;
-    }
-
-    .title {
-        background: rgb(191, 173, 81, 0.5);
-        padding: 10px 0;
-        border-top-right-radius: 15px;
-        border-bottom-right-radius: 15px;
-        align-self: flex-start;
-    }
-
-    .subtitle {
-        font-style: italic;
-        text-align: center;
-        color: var(--dark-alt-color);
-    }
-
-    .sigma-font {
-        font-size: 20px;
-    }
-
     ul {
         max-width: 500px;
+        min-width: 250px;
+        margin: 0 20px;
+        padding: 10px 0;
         display: flex;
         flex-direction: column;
         gap: 6px;
+        background: rgb(148, 170, 115, 0.2);
         box-shadow: 0 0 4px var(--dark-alt-color);
         border-radius: 5px;
-        padding: 10px 0;
-        background: rgb(148, 170, 115, 0.2);
-        margin: 0 20px;
-    }
-
-    li {
-        font-size: 16px;
-        line-height: 20px;
-        padding: 0 20px;
-        list-style-type: none;
-
-        &::before {
-            content: '';
-            display: inline-block;
-            width: 8px;
-            height: 8px;
-            background-color: var(--light-alt-color);
-            transform: rotate(45deg);
-            margin-right: 10px;
-        }
     }
 
     img {
         border-radius: 5px;
     }
+}
+
+.name {
+    margin-bottom: 4px;
+    height: unset; // check to remove
+}
+
+.title {
+    align-self: flex-start;
+    padding: 10px 0;
+    background: rgb(191, 173, 81, 0.5);
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.subtitle {
+    text-align: center;
+    color: var(--dark-alt-color);
+    font-style: italic;
+}
+
+.sigma-font {
+    font-size: 20px;
 }
 
 .right-col {
@@ -148,14 +117,170 @@
     align-items: center;
 }
 
-
-
 .img-action {
-    width: 100%;
+    min-width: 250px;
+    max-width: 400px;
+    margin: 0 20px;
     object-fit: contain;
 }
 
 .img-cover {
     height: calc(100vh - 80px);
+    max-width: 400px;
     object-fit: cover;
+    align-self: end;
+
+    @media (max-width: 1024px) {
+        max-width: 300px;
+    }
+
+    @media (max-width: 768px) {
+        height: unset;
+        max-height: calc(100vh - 80px);
+        margin: 10px 0;
+    }
+
+    @media (max-width: 600px) {
+        max-width: 280px;
+    }
+}
+
+.content-mobile {
+    display: none;
+
+    @media (max-width: 768px) {
+        display: flex;
+    }
+}
+
+li {
+    padding: 0 20px;
+    font-size: 16px;
+    line-height: 20px;
+    list-style-type: none;
+
+    &::before {
+        content: '';
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        margin-right: 10px;
+        background-color: var(--light-alt-color);
+        transform: rotate(45deg);
+    }
+}
+
+.background {
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    gap: 6px;
+    margin: 10px 5%;
+    padding: 10px 0;
+    background: rgb(148, 170, 115, 0.2);
+    box-shadow: 0 0 4px var(--dark-alt-color);
+    border-radius: 5px;
+}
+
+.upper__display {
+    display: none;
+}
+
+// @media (max-width: 1024px) {}
+
+@media (max-width: 768px) {
+    .section {
+        height: unset;
+    }
+
+    .content {
+        display: none;
+    }
+
+    .education {
+        width: 100%;
+        padding: 0;
+        margin: 10px 0;
+        background: rgb(148, 170, 115, 0.2);
+        box-shadow: 0 0 4px var(--dark-alt-color);
+
+        &__diploma {
+            max-width: 350px;
+            margin: 5px 0;
+            border-radius: 5px;
+        }
+
+        &__pillar-top {
+            margin: 0;
+        }
+    }
+
+    .upper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        justify-items: end;
+        gap: 10px;
+        width: 100%;
+
+        &__display {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding-left: 10px;
+
+            .education {
+                justify-content: center;
+                border-radius: 5px;
+                max-width: 350px;
+                flex-grow: unset; // check to remove
+            }
+        }
+    }
+
+    .display {
+        display: none;
+    }
+
+    .title {
+        margin-right: 80px;
+        align-self: center;
+
+        .name {
+            margin-left: 80px;
+        }
+
+        .subtitle {
+            margin-left: 80px;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .upper {
+        display: flex;
+        flex-direction: column;
+
+        &__display {
+            display: none;
+        }
+    }
+
+    .display {
+        display: unset;
+    }
+
+    .title {
+        margin-right: 40px;
+
+        // align-self: center;
+        .name {
+            margin-left: 40px;
+        }
+
+        .subtitle {
+            margin-left: 30px;
+        }
+    }
 }
